﻿- Fix map tree replacement resetting to prop mode after applying replacement
- Add error notification when random prop or tree template can't be loadedS


Version 0.9.7.2 -

- Reduce minimum scaling to 0.1
- Update AlgernonCommons


Version 0.9.7.1 -

- Fix map replacement panel not opening with targeted prop already selected
- Fix random prop probabilities not being properly calculated when adding a new variant
- Add Chinese road arrow replacements
- Fix errors in some road sign replacement packs


Version 0.9.7 -

- Move prop detection triggers from initial to final props
- Fix panel backgrounds appearing transparent in editors
- Update AlgernonCommons


Version 0.9.6.3 -

- Add bounds checks to scaling factors
- Automatically pass current selection to scaling and random panels


Version 0.9.6.2 -

- Fix regression causing building prop modification to unpause games


Version 0.9.6.1 -

- Add CheckReferences call when modifying building props to catch situations where final SpecialPlace prop has been replaced


Version 0.9.6 -

- Major refactor of building and network replacement
- Increase offset slider displayed maximum to 32
- Implement AlgernonCommons
- Adjust debugging logging
- Update UnifiedUI


Version 0.9.5.1 -

- Fix preview for all- replacements not showing when adjusting existing all- replacments


Version 0.9.5 -

- Enable adding props to network lanes with no existing laneprop array
- Fix added random building props always showing the same variations if more than one is added to the same prefab
- Update generation of blank config files
- Update translation framework


Version 0.9.4.4 -

- Lane highlighting now follows same modifier key rules as prop/tree highlighting
- Fix preview updates not triggering when slider values are out-of-range
- Fix network 'add prop' button not updating state on selected lange change
- Fix added netowrk props sometimes rotating 180 degrees on load in some networks


Version 0.9.4.3 -
